<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".navigation_fragments.profile.EditMenuFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_profile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorOnPrimary"
        android:text="@string/btn_edit_profile_data"
        android:textColor="@color/color_primary"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_baseline_person_24"
        app:iconTint="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@+id/btn_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorOnPrimary"
        android:text="@string/btn_change_password"
        android:textColor="@color/color_primary"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_baseline_lock_24"
        app:iconTint="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@+id/btn_profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_profile_data" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorOnPrimary"
        android:text="@string/btn_update_photo"
        android:textColor="@color/color_primary"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_baseline_photo_camera_24"
        app:iconTint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_password" />

</androidx.constraintlayout.widget.ConstraintLayout>