...
                        android:text="@string/delete_warning"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/color_danger"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_input_password_delete"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:boxStrokeColor="@color/color_primary"
                        app:hintTextColor="@color/color_primary"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/color_primary">
...
                            android:inputType="textPassword"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/btn_delete_account"
                        style="@style/loginButton"
                        android:backgroundTint="@color/color_danger"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="20dp"
                        android:text="@string/delete"
...
