<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:title="@string/nav_bar_profile"
        android:icon="@drawable/ic_baseline_person_24" />

    <item
        android:id="@+id/homeFragment"
        android:title="@string/nav_bar_home"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/nav_bar_settings"
        android:icon="@drawable/ic_baseline_settings_24" />

</menu>