...
            android:layout_gravity="center"
            card_view:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"
                android:scaleType="fitXY"
                android:contentDescription="@string/description_profile_picture"/>

...
