...
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary"
        android:text="@string/btn_app_info"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_report_bug"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_report_bug"
        android:layout_width="wrap_content"
...
