...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_input_bug_name"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:boxStrokeColor="@color/color_primary"
                        app:hintTextColor="@color/color_primary">

                        <com.google.android.material.textfield.TextInputEditText
...
